<resources>
    <string name="app_name">TripTraq</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="pt_usuario">Usuario</string>
    <string name="pt_contraseña">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="title_activity_gps">GPS</string>
    <string name="ruta">Ruta</string>
    <string name="men">Menú</string>
    <string name="reparaciones">Reparaciones</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre1">nombre</string>
    <string name="descripci_n">Descripción:</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio:</string>
    <string name="precio1">Precio</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="origen">Origen:</string>
    <string name="destino">Destino:</string>
    <string name="flete">Flete:</string>
    <string name="flete1">Flete</string>
    <string name="anticipo">Anticipo:</string>
    <string name="anticipo1">Anticipo</string>
    <string name="galones">Galones:</string>
    <string name="galones1">Galones</string>
    <string name="precio_galon1">Precio galon:</string>
    <string name="precio_galon">Precio Galon</string>
    <string name="informaci_n">Información</string>
    <string name="cancelar1">Cancelar</string>
    <string name="guardar1">Guardar</string>
    <string name="login">Login</string>
    <string name="combustible">Combustible</string>
    <string name="galones2">Galones:</string>
    <string name="galones3">Galones</string>
    <string name="precio_galon2">Precio galon:</string>
    <string name="precio_galon3">Precio Galon</string>
    <string name="cancelar3">Cancelar</string>
    <string name="guardar4">Guardar</string>
    <string name="origen1">Origen</string>
    <string name="destino1">Destino</string>
</resources>