<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Reparacion">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reparaciones"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_nombre"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/nombre1"
            android:inputType="text" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/descripci_n"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_nombre" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_descripcion"
        android:layout_width="351dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion">

        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_precio"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/precio"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_descripcion" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_precio"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio">

        <EditText
            android:id="@+id/et_precio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/precio1"
            android:inputType="number" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cancelar"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/boton"
        android:backgroundTint="@color/boton"
        android:onClick="onClickCancelar"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_precio">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_save"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/boton"
        android:onClick="onClick"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_cancelar"
        app:layout_constraintTop_toBottomOf="@+id/cv_precio">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/guardar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>